Fix but wherein group, resource and attribute panes are not showing. Adjust the all the pane's width and height to make them fit "snugly" beside each other.

--- a/aem-webapp/src/main/webapp/resources/css/react/generic-components/rtreelist.css
+++ b/aem-webapp/src/main/webapp/resources/css/react/generic-components/rtreelist.css
@@ -3,7 +3,6 @@
 }
 
 .tree-list-content {
-    min-width: 337px;
     min-height: 303px;
     width: auto;
     border: 1px solid rgb(195, 195, 195);
