--- a/aem-webapp/src/main/webapp/resources/css/react/resource-attr-pane.css
+++ b/aem-webapp/src/main/webapp/resources/css/react/resource-attr-pane.css
@@ -1,5 +1,4 @@
 .attr-values-container {
-    min-width: 327px;
     min-height: 303px;
     border: 1px solid rgb(195, 195, 195);
 }
