--- a/aem-webapp/src/main/webapp/resources/css/react/resource-editor.css
+++ b/aem-webapp/src/main/webapp/resources/css/react/resource-editor.css
@@ -1,5 +1,9 @@
-.group-jvms-tree-list-dialog .ui-dialog-content {
-    overflow: hidden !important;
-    height: 303px !important;
-    padding: .5em .5em !important;
+.resource-pane {
+    min-height: 354px;
+}
+
+.resource-static-dialog-content {
+    min-width: 341px;
+    min-height: 305px;
+    padding: 5px 5px 5px 5px !important;
 }
