--- a/aem-webapp/src/main/webapp/resources/css/react/resource-pane.css
+++ b/aem-webapp/src/main/webapp/resources/css/react/resource-pane.css
@@ -1,5 +1,4 @@
 .add-edit-delete-resources-container {
-    min-width: 327px;
     min-height: 303px;
 }
 
@@ -23,7 +22,7 @@ select.resource-type-dropdown {
 
 div.resource-list {
     min-width: 100%;
-    min-height: 275px;
+    min-height: 276px;
     border: 1px solid rgb(195, 195, 195);
     background-color: white;
     border-left: none;
